manifests/bookwork/observability/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    name: monitoring
    app.kubernetes.io/name: observability
    app.kubernetes.io/part-of: bookwork
